# video

./: .gitignore  Exported-2023-06-23.vssettings  mount-nfs.ps1  startup.ps1  video.sln  导出设置.vssettings
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  launch.vs.json
cpp/CMakeFunctions/: collect.cmake  copy.cmake  get-source-and-build.cmake  install.cmake  link.cmake  setup.cmake  source_and_headers.cmake
cpp/PInvokeNativeHelper/: CMakeLists.txt
cpp/PInvokeNativeHelper/include/PInvokeNativeHelper/: DotNetStream.cpp  DotNetStream.h  StreamHandle.cpp  StreamHandle.h  stream_helper.cpp  stream_helper.h  string_helper.cpp
cpp/PInvokeNativeHelper/src/: SDL_EventGetterHelper.cpp  SDL_EventGetterHelper.h  stream_helper.cpp  stream_helper.h  string_helper.h
cpp/a3/: CMakeLists.txt  main.cpp
cpp/a3/src/: A3Device.h  A3Excepion.h  FileTsSource.cpp  FileTsSource.h  R2TuneTable.h  TsPusher.cpp  TsPusher.h  TsSource.h  UsbA3Device.cpp  UsbA3Device.h  chip_define.cpp  chip_define.h  halreg_calibration.h  halreg_define.h  halreg_output.h  halreg_rfmixer.h  halreg_stream.h  halservice_base.h  halservice_broadcast.h  halservice_rescure.h  halservice_transform.h  output_base.h  output_modulator.h  storage_r2tune.h  tool_bufstream.cpp  tool_bufstream.h  tool_helpful.h  tool_helpful_circlebuf.cpp  tool_helpful_fifo.cpp  tool_helpful_mempool.cpp  tool_printf.cpp  tool_printf.h  vatek_base.h  vatek_sdk_base.cpp
cpp/avmixer/: CMakeLists.txt  main.cpp
cpp/check-avstream/: CMakeLists.txt  main.cpp
cpp/cmake-import-helper/: import-ffmpeg.cmake  import-nlohmann-json.cmake  import-src.cmake  setup.cmake
cpp/cmake-import-helper/CMakeFunctions/: process.cmake  source_and_headers.cmake
cpp/crc/: CMakeLists.txt  main.cpp
cpp/ffmpeg-wrapper/: CMakeLists.txt  main.cpp
cpp/ffmpeg-wrapper/include/ffmpeg-wrapper/: AVCalculate.cpp  AVChannelLayoutExtension.h  AVChannelLayoutExtention.cpp  AVCodecExtention.cpp  AVCodecExtention.h  AVCompare.cpp  AVParse.cpp  AVPixelFormatExtension.h  AVSampleFormatExtention.cpp  AVSampleFormatExtention.h  AVToString.cpp  AVToString.h  ErrorCode.cpp  ErrorCode.h  ImageBuffer.cpp  ImageBuffer.h  base_include.h
cpp/ffmpeg-wrapper/private_src/: DecoderPipe.cpp  DecoderPipe.h  EncoderPipe.cpp  FpsAdjustPipe.cpp  FpsAdjustPipe.h  SwsPipe.cpp  SwsPipe.h
cpp/ffmpeg-wrapper/src/: AVCalculate.cpp  AVCalculate.h  AVChannelLayoutExtension.h  AVChannelLayoutExtention.cpp  AVCodecExtention.cpp  AVCodecExtention.h  AVCompare.cpp  AVCompare.h  AVError.h  AVParse.cpp  AVParse.h  AVPixelFormatExtension.h  AVSampleFormatExtention.cpp  AVSampleFormatExtention.h  AVToString.cpp  AVToString.h  ErrorCode.cpp  ErrorCode.h  ImageBuffer.cpp  ImageBuffer.h  SDL_EventGetter.h  SDL_Timer.cpp  av_std_out.cpp  av_std_out.h  include_ffmpeg.h
cpp/ffmpeg-wrapper/src/container/: HysteresisBlockingFrameQueue.cpp  HysteresisBlockingFrameQueue.h  HysteresisBlockingPacketQueue.h
cpp/ffmpeg-wrapper/src/filter/: VideoFilterGraph.cpp  VideoFilterGraph.h
cpp/ffmpeg-wrapper/src/info-collection/: AVStreamInfoCollection.cpp  AVStreamInfoCollection.h  AudioStreamInfoCollection.h  IAudioFrameInfoCollection.h  IAudioStreamInfoCollection.h  IVideoFrameInfoCollection.h  IVideoStreamInfoCollection.h  VideoStreamInfoCollection.h
cpp/ffmpeg-wrapper/src/info_collection/: AVStreamInfoCollection.cpp  AudioFrameInfoCollection.h  IAudioFrameInfoCollection.h  IAudioStreamInfoCollection.h  VideoFrameInfoCollection.cpp  VideoFrameInfoCollection.h
cpp/ffmpeg-wrapper/src/mux/: SptsEncodeMux.cpp  SptsEncodeMux.h
cpp/ffmpeg-wrapper/src/pipe/: DecoderPipe.cpp  DecoderPipe.h  EncoderPipe.cpp  EncoderPipe.h  FpsAdjustPipe.h  InfinitePacketPipe.cpp  InfinitePacketPipe.h  MpegtsAudioStreamEncodeMuxPipe.h  MpegtsVideoStreamEncodeMuxPipe.cpp  MpegtsVideoStreamEncodeMuxPipe.h  PacketPump.h  PassThoughFramePipe.h  (+10 more)
cpp/ffmpeg-wrapper/官方例程/: avio_http_serve_files.c  avio_read_callback.c  decode_filter_audio.c  decode_filter_video.c  mux.c  transcode_aac.c
cpp/jccpp/: CMakeLists.txt
cpp/jccpp/src/: CircleBufferMemoryStream.cpp  Console.h  Counter.cpp  Counter.h  DateTime.cpp  DateTime.h  Exception.cpp  Exception.h  IDisposable.h  JoinedStream.cpp  MemoryStream.cpp  Stream.cpp  TaskCompletionSignal.cpp  Wrapper.h  define.h
cpp/jccpp/win/: strings.c  strings.h
cpp/libtsduck/: CMakeLists.txt
cpp/libusb-wrapper/: CMakeLists.txt
cpp/libusb-wrapper/src/: USBRequestOptions.cpp  USBRequestOptions.h  USBRequestType.cpp  USBRequestType.h  UsbConfigDescriptorWrapper.h  UsbContextWrapper.h  UsbDeviceListWrapper.h  UsbDeviceWrapper.cpp  UsbDeviceWrapper.h  UsbError.cpp  UsbError.h
cpp/pinvoke/: CMakeLists.txt
cpp/pinvoke-base/: CMakeLists.txt
cpp/point24/: CMakeLists.txt  main.cpp
cpp/point24/src/: Point24Solver.cpp  Point24Solver.h  calculate_point24.h
cpp/sdl2-wrapper/: CMakeLists.txt
cpp/sdl2-wrapper/src/: AVPacketPlayer.cpp  AVPacketPlayer.h  AudioFramePlayer.cpp  AudioFramePlayer.h  AudioPacketPlayer.cpp  AudioPacketPlayer.h  IRefTimer.h  SDL_AudioSpecWrapper.cpp  SDL_AudioSpecWrapper.h  SDL_DefaultAudioDevice.cpp  SDL_DefaultAudioDevice.h  SDL_EventGetter.cpp  SDL_EventGetter.h  SDL_Initializer.cpp  SDL_Initializer.h  SDL_RendererWrapper.cpp  SDL_RendererWrapper.h  SDL_TextureWrapper.cpp  SDL_TextureWrapper.h  SDL_Timer.cpp  SDL_Timer.h  SDL_Util.cpp  SDL_Util.h  SDL_WindowWrapper.cpp  SDL_WindowWrapper.h  TimeInterpolator.h  Timer.cpp  VideoFrameDisplayer.cpp  VideoFrameDisplayer.h  VideoFramePlayer.cpp  VideoFramePlayer.h  VideoPacketPlayer.cpp  VideoPacketPlayer.h
cpp/test/: CMakeLists.txt  main.cpp
cpp/test/src/: test_beast_http_request.cpp  test_beast_http_request.h  test_boost_asio.cpp  test_boost_asio.h  test_boost_http.cpp  test_boost_http.h  test_tsduck.cpp  test_tsduck.h
cpp/ts-dumper/: CMakeLists.txt  main.cpp
cpp/tsduck/: CMakeLists.txt
cpp/tsduck/private_src/: PidChanger.cpp  PidChanger.h
cpp/tsduck/src/: PatParser.h  PidProvider.cpp  PipeTsPacketSource.cpp  PipeTsPacketSource.h  README.txt  TSDumper.cpp  TSDumper.h  TableOperator.h  TestProgramMux.h  TsDuckToString.h
(+959 files in other folders)
